2008-07-30  Ivan N. Zlatev  <contact@i-nz.net>

	* TableLayoutTest.cs: Add tests for bug #412582

2008-07-29  Jonathan Pobst  <monkey@jpobst.com>

	* ListBox.cs: Make test not font dependent.

2008-07-29  Jonathan Pobst  <monkey@jpobst.com>

	* ListBox.cs: Add test for bug #412728.

2008-07-25  Ivan N. Zlatev  <contact@i-nz.net>

	* TableLayoutTest.cs: Add test for bug #412161

2008-07-23  Gert Driesen  <drieseng@users.sourceforge.net>

	* ListViewItemTest.cs: Marked SerializeExact_Mono as NotWorking to fix
	buildbot.

2008-07-22  Gert Driesen  <drieseng@users.sourceforge.net>

	* ListViewItemTest.cs: Enabled (de)serialization tests.
	* PictureBoxTest.cs: Enabled tests for bug #378308.

2008-07-20  Gert Driesen  <drieseng@users.sourceforge.net>

	* ListViewItemTest.cs: Fixed tests.

2008-07-20  Gert Driesen  <drieseng@users.sourceforge.net>

	* ListViewItemTest.cs: Added ListViewSubItem (de)serialization tests,
	added/improved ctor tests and add property tests.
	* PictureBoxTest.cs: Added tests for Load(Async) argument checks.

2008-07-15  Jonathan Pobst  <monkey@jpobst.com>

	* ImageListTest.cs: Add test for bug #409169.

2008-07-14  Jonathan Pobst  <monkey@jpobst.com>

	* TreeViewTest.cs: Add test for bug #409029.

2008-07-14  Jonathan Pobst  <monkey@jpobst.com>

	* TreeNodeCollectionTest.cs: Add test for bug #408999.

2008-07-12  Gert Driesen  <drieseng@users.sourceforge.net>

	* PictureBoxTest.cs: Split up ImageLocation test in sync and async
	tests.

2008-07-11  Gert Driesen  <drieseng@users.sourceforge.net>

	* PictureBoxTest.cs: Added (notworking) test for ImageLocation.

2008-07-10  George Giolfan  <georgegiolfan@yahoo.com>

	* FormTest.cs: Enabled the MinimizedWindowSize test and made it "NotWorking".

2008-07-09  Jonathan Pobst  <monkey@jpobst.com>

	* StatusBarTest.cs: Tests from Andy Hume for StatusBarPanelCollection.

2008-07-08  George Giolfan  <georgegiolfan@yahoo.com>

	* FormTest.cs: Disabled the MinimizedWindowSize test.
