@@ -1,3 +1,9 @@
+2008-07-31  Carlos Alberto Cortez <calberto.cortez@gmail.com>
+
+	* ListBindingHelperTest.cs: New test for GetList receiving an IEnumerable
+	object which return instances of ICustomTypeDescriptor instances,
+	instead of actual items.
+
 2008-07-30  Ivan N. Zlatev  <contact@i-nz.net>
 
 	* TableLayoutTest.cs: Add tests for bug #412582
